:hammer: Composer Fix

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/AcGdeco/payment_methods_rates.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/AcGdeco/redes-sociais.git"
         }
     ],
     "require": {
@@ -85,6 +89,7 @@
         "deco/base_theme": "dev-main",
         "deco/menu": "dev-main",
         "deco/rates": "dev-main",
+        "deco/social": "dev-main",
         "deco/tag": "dev-main",
         "doctrine/annotations": "^1.13",
         "elasticsearch/elasticsearch": "~7.17.0 || ~8.5.0",
