:heavy_plus_sign: Deco Shipping

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/AcGdeco/redes-sociais.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/AcGdeco/shipping.git"
         }
     ],
     "require": {
@@ -89,6 +93,7 @@
         "deco/base_theme": "dev-main",
         "deco/menu": "dev-main",
         "deco/rates": "dev-main",
+        "deco/shipping": "dev-main",
         "deco/social": "dev-main",
         "deco/tag": "dev-main",
         "doctrine/annotations": "^1.13",
